Integration tests complete - unit tests complete - code clean up and improvements

--- a/BookstoreApi/appsettings.json
+++ b/BookstoreApi/appsettings.json
@@ -9,7 +9,7 @@
 
   "JwtSettings": {
     "SecretKey": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9",
-    "Issuer": "localhost:44388",
+    "Issuer": "BookstoreApi",
     "Audience": "BookstoreWebAp",
     "TokenExpirationMinutes": 1440
   }
